syntax = "proto3";

option csharp_namespace = "GrpcService_Hello";
//option csharp_namespace = "Client";

//package greet;
package helloworld;


// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SayHelloAgain (HelloRequest) returns (HelloReply);
  rpc Count(CountRequest) returns (CountReply);
  rpc CountServer(CountRequest) returns (stream CountReply);
  
}


// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message CountRequest {
	int32 num = 1;
}

message CountReply{
	string message = 1;
}
